--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,63 @@
+body {background-image: url("https://previews.123rf.com/images/ifh/ifh1604/ifh160400226/55617759-illustration-of-flying-squares-green-transparent-color-on-white-background-Stock-Vector.jpg");
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+}
 
+header {
+        color:white;
+        max-width: 100%;
+        max-height: 20em;
+        display: block;
+    }
+
+.footer {background-image: url("https://seeklogo.com/images/H/herbalife-logo-32E0EDC62A-seeklogo.com.gif")
+    color:white;
+    max-height: 10em;
+    min-height: 2em;
+    max-width: 100%;
+    min-width: 100%;
+    display: inline-block;
+    border: solid 4px white;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: auto;
+
+}
+#fbbutton {border: white 1px solid;
+  background-color: white;
+  opacity: 0.7;
+  max-height:1%;
+  max-width:8%;
+  border-radius: 20%;
+  text-align: center;
+}
+#fbtext {color:royalblue;
+font-weight: bold;
+font-family: Verdana;
+}
+#facebook {color: darkblue;}
+
+.intro {position: center;
+    display: block;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: Verdana;
+    border: solid 4px green;
+    border-radius: 20%;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 51%;
+    text-orientation: center;
+    background-color: #80ffaa;
+    }
+
+.clients {border: solid green 2px;
+  margin-right: auto;
+  margin-left: auto;
+  text-orientation: center;
+  justify-content: center;
+
+
+}
+
+.fbbutton {}
